// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can handle two gamepads with same id 1`] = `
[
  {
    "connectionIndex": 0,
    "id": "test",
    "isUse": true,
    "type": "primary",
  },
  {
    "connectionIndex": 1,
    "id": "test",
    "isUse": true,
    "type": "secondary",
  },
]
`;

exports[`update selected gamepad 1`] = `
[
  {
    "connectionIndex": 0,
    "id": "test",
    "isUse": true,
    "type": "primary",
  },
  {
    "connectionIndex": 1,
    "id": "test",
    "isUse": false,
    "type": undefined,
  },
]
`;
